Update notebooks to use pyampact pypi package

--- a/Example_Script.ipynb
+++ b/Example_Script.ipynb
@@ -36,9 +36,13 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/pyAMPACT/\n",
-    "!pip install -r requirements.txt"
+    "%cd /content/\n",
+    "from IPython.utils import io\n",
+    "print('Importing libraries...')\n",
+    "with io.capture_output() as captured:\n",
+    "    !pip install --upgrade pandas\n",
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact"
    ]
   },
   {
