--- a/File_Converter.ipynb
+++ b/File_Converter.ipynb
@@ -56,13 +56,14 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/pyAMPACT/\n",
+    "%cd /content/\n",
     "from IPython.utils import io\n",
-    "print('Updating pandas...')\n",
+    "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
     "    !pip install --upgrade pandas\n",
-    "from symbolic import *\n",
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact\n",
+    "\n",
     "contents = [file for file in os.listdir('./added_files') if file != 'README.txt'\n",
     "            and file.endswith(('krn', 'xml', 'mei', 'mxl', 'musicxml', 'mid', 'midi', 'abc', 'txt'))]\n",
     "if not len(contents):\n",
@@ -94,7 +95,7 @@
     "contents = [file for file in os.listdir('./added_files') if file != 'README.txt'\n",
     "            and file.endswith(('krn', 'xml', 'mei', 'mxl', 'musicxml', 'mid', 'midi', 'abc', 'txt'))]\n",
     "for file in contents:\n",
-    "    score = Score(f'./added_files/{file}')\n",
+    "    score = pyampact.Score(f'./added_files/{file}')\n",
     "    score.toKern(file.rsplit('.', 1)[0])"
    ]
   },
@@ -120,7 +121,7 @@
     "contents = [file for file in os.listdir('./added_files') if file != 'README.txt'\n",
     "            and file.endswith(('krn', 'xml', 'mei', 'mxl', 'musicxml', 'mid', 'midi', 'abc', 'txt'))]\n",
     "for file in contents:\n",
-    "    score = Score(f'./added_files/{file}')\n",
+    "    score = pyampact.Score(f'./added_files/{file}')\n",
     "    score.toMEI(file.rsplit('.', 1)[0])"
    ]
   },
