--- a/README.ipynb
+++ b/README.ipynb
@@ -48,14 +48,13 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/pyAMPACT/\n",
+    "%cd /content/\n",
     "from IPython.utils import io\n",
-    "print('Updating pandas...')\n",
+    "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
     "    !pip install --upgrade pandas\n",
-    "from symbolic import *\n",
-    "print('-> Successfully imported Score class.')"
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact"
    ]
   },
   {
@@ -88,7 +87,7 @@
     }
    ],
    "source": [
-    "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
+    "piece = pyampact.Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')"
    ]
   },
@@ -2065,7 +2064,7 @@
     }
    ],
    "source": [
-    "piece = Score('./test_files/cDataTest.krn')\n",
+    "piece = pyampact.Score('./test_files/cDataTest.krn')\n",
     "piece.functions()"
    ]
   },
@@ -2201,7 +2200,7 @@
     }
    ],
    "source": [
-    "piece = Score('./test_files/cDataTest.krn')\n",
+    "piece = pyampact.Score('./test_files/cDataTest.krn')\n",
     "functions = piece.functions(output='series')\n",
     "harmonies = piece.harm(output='series')\n",
     "keys = piece.harmKeys(output='series')\n",
@@ -2831,7 +2830,7 @@
     }
    ],
    "source": [
-    "piece = Score(score_path='https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K353/Stripped/M353_04_01a_b.krn')\n",
+    "piece = pyampact.Score(score_path='https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K353/Stripped/M353_04_01a_b.krn')\n",
     "fromJSON('./test_files/cdataCompact.json')"
    ]
   },
