--- a/pyAMPACT_and_crim_intervals.ipynb
+++ b/pyAMPACT_and_crim_intervals.ipynb
@@ -33,11 +33,9 @@
     "    !pip install --upgrade pandas\n",
     "    !pip install -r requirements.txt\n",
     "    import crim_intervals as crim\n",
-    "\n",
-    "%cd ..\n",
-    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/pyAMPACT/\n",
-    "from pyampact import *"
+    "    %cd ..\n",
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact"
    ]
   },
   {
@@ -57,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyamp_piece = Score('test_files/O_virgo_miserere_mei.krn')\n",
+    "pyamp_piece = pyampact.Score('test_files/O_virgo_miserere_mei.krn')\n",
     "crim_piece = crim.main_objs.Crimport('https://raw.githubusercontent.com/jcdevaney/pyAMPACT/master/test_files/O_virgo_miserere_mei.krn')"
    ]
   },
