--- a/pyAMPACT_Quick_Ref_Colab.ipynb
+++ b/pyAMPACT_Quick_Ref_Colab.ipynb
@@ -403,14 +403,15 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "%cd /content/pyAMPACT/\n",
+    "%cd /content/\n",
     "from IPython.utils import io\n",
-    "print('Updating pandas...')\n",
+    "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
     "    !pip install --upgrade pandas\n",
-    "from symbolic import *\n",
-    "piece = Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact\n",
+    "\n",
+    "piece = pyampact.Score('https://raw.githubusercontent.com/alexandermorgan/TAVERN/master/Mozart/K179/Stripped/M179_00_02b_b.krn')\n",
     "print(f'-> Successfully imported {piece.metadata[\"title\"]} by {piece.metadata[\"composer\"]}.\\n')\n",
     "pianoRoll = piece.pianoRoll()\n",
     "pianoRoll"
