--- a/pyAMPACT_and_Humdrum.ipynb
+++ b/pyAMPACT_and_Humdrum.ipynb
@@ -56,15 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd /content/\n",
     "from IPython.utils import io\n",
-    "print('Updating pandas...')\n",
+    "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
     "    !pip install --upgrade pandas\n",
-    "    !git clone https://github.com/jcdevaney/pyAMPACT.git\n",
-    "    %cd /content/pyAMPACT/\n",
-    "from symbolic import *\n",
+    "    !pip install -i https://test.pypi.org/simple/ --no-deps pyampact==0.3.1\n",
+    "    import pyampact\n",
     "\n",
-    "piece = Score()"
+    "piece = pyampact.Score('https://github.com/jcdevaney/pyAMPACT/blob/master/test_files/O_virgo_miserere_mei.krn')"
    ]
   },
   {
