--- a/File_Converter.ipynb
+++ b/File_Converter.ipynb
@@ -57,6 +57,7 @@
    ],
    "source": [
     "%cd /content/\n",
+    "import os\n",
     "from IPython.utils import io\n",
     "print('Importing libraries...')\n",
     "with io.capture_output() as captured:\n",
